{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 137,
  "lineage": "e9bc37ee-44c8-0eec-ba45-b0ac3b49b9a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023fd3506871e24ce",
            "association_id": "eipassoc-08525bc02fa6ab8b4",
            "domain": "vpc",
            "id": "eipalloc-023fd3506871e24ce",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06da17db532987777",
            "private_dns": "ip-172-16-5-231.ec2.internal",
            "private_ip": "172.16.5.231",
            "public_dns": "ec2-18-233-214-28.compute-1.amazonaws.com",
            "public_ip": "18.233.214.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:internet-gateway/igw-00319545fe43e01fe",
            "id": "igw-00319545fe43e01fe",
            "owner_id": "766884883801",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-04e89d79425540b31-IG!",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-04e89d79425540b31-IG!",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:loadbalancer/app/ext-alb/a034c38ea91ba4b5",
            "arn_suffix": "app/ext-alb/a034c38ea91ba4b5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-1008424452.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:loadbalancer/app/ext-alb/a034c38ea91ba4b5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-06a1b4a4a30edc247"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b8ee509178c7ee6"
              },
              {
                "subnet_id": "subnet-076ca6e68e50763d7"
              }
            ],
            "subnets": [
              "subnet-02b8ee509178c7ee6",
              "subnet-076ca6e68e50763d7"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:loadbalancer/app/ialb/a3b356446e581533",
            "arn_suffix": "app/ialb/a3b356446e581533",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-805645652.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:loadbalancer/app/ialb/a3b356446e581533",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-017879cddf1ddbb33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04bbca8ea49c8780f"
              },
              {
                "subnet_id": "subnet-0b326fbcba2eee7ff"
              }
            ],
            "subnets": [
              "subnet-04bbca8ea49c8780f",
              "subnet-0b326fbcba2eee7ff"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:listener/app/ext-alb/a034c38ea91ba4b5/8308665bc9f7c13c",
            "certificate_arn": "arn:aws:acm:us-east-1:766884883801:certificate/a2fff860-da1d-48d4-b627-08c04265661b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/nginx-tgt/c7750797a1ffe07b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:listener/app/ext-alb/a034c38ea91ba4b5/8308665bc9f7c13c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:loadbalancer/app/ext-alb/a034c38ea91ba4b5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.aremac",
            "aws_acm_certificate_validation.aremac",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.aremac",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.aremac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:listener/app/ialb/a3b356446e581533/9657772195173cba",
            "certificate_arn": "arn:aws:acm:us-east-1:766884883801:certificate/a2fff860-da1d-48d4-b627-08c04265661b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/wordpress-tgt/4fe12e6710cd3621",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:listener/app/ialb/a3b356446e581533/9657772195173cba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:loadbalancer/app/ialb/a3b356446e581533",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.aremac",
            "aws_acm_certificate_validation.aremac",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.aremac",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.aremac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/tooling-tgt/258ad72e301430b0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:listener-rule/app/ialb/a3b356446e581533/9657772195173cba/9c70175c81c67723",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.aremac.gq"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:listener-rule/app/ialb/a3b356446e581533/9657772195173cba/9c70175c81c67723",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:listener/app/ialb/a3b356446e581533/9657772195173cba",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.aremac",
            "aws_acm_certificate_validation.aremac",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.aremac",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.aremac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/nginx-tgt/c7750797a1ffe07b",
            "arn_suffix": "targetgroup/nginx-tgt/c7750797a1ffe07b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/nginx-tgt/c7750797a1ffe07b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/tooling-tgt/258ad72e301430b0",
            "arn_suffix": "targetgroup/tooling-tgt/258ad72e301430b0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/tooling-tgt/258ad72e301430b0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/wordpress-tgt/4fe12e6710cd3621",
            "arn_suffix": "targetgroup/wordpress-tgt/4fe12e6710cd3621",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766884883801:targetgroup/wordpress-tgt/4fe12e6710cd3621",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023fd3506871e24ce",
            "connectivity_type": "public",
            "id": "nat-011ee46d722af30b1",
            "network_interface_id": "eni-06da17db532987777",
            "private_ip": "172.16.5.231",
            "public_ip": "18.233.214.28",
            "subnet_id": "subnet-02b8ee509178c7ee6",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "tommyverceti99@yahoo.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00319545fe43e01fe",
            "id": "r-rtb-0c0bcb68a1159176a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0bcb68a1159176a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:route-table/rtb-0eac3f3f4c105743a",
            "id": "rtb-0eac3f3f4c105743a",
            "owner_id": "766884883801",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:route-table/rtb-0c0bcb68a1159176a",
            "id": "rtb-0c0bcb68a1159176a",
            "owner_id": "766884883801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00319545fe43e01fe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fcd3745676f112d",
            "route_table_id": "rtb-0eac3f3f4c105743a",
            "subnet_id": "subnet-0b326fbcba2eee7ff"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d70486fe9936373e",
            "route_table_id": "rtb-0eac3f3f4c105743a",
            "subnet_id": "subnet-04bbca8ea49c8780f"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b024dc4da9d6c418",
            "route_table_id": "rtb-0eac3f3f4c105743a",
            "subnet_id": "subnet-0a7abb217a7bd6457"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085ba773246abdc3b",
            "route_table_id": "rtb-0eac3f3f4c105743a",
            "subnet_id": "subnet-025fc45d33a26d1b3"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0228eae15e9a51100",
            "route_table_id": "rtb-0c0bcb68a1159176a",
            "subnet_id": "subnet-02b8ee509178c7ee6"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d4e91bc6ba59a20",
            "route_table_id": "rtb-0c0bcb68a1159176a",
            "subnet_id": "subnet-076ca6e68e50763d7"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:security-group/sg-097de78a38f699221",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097de78a38f699221",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "766884883801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:security-group/sg-0d016c44e49f91a39",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d016c44e49f91a39",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0508183825df55b64"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0508183825df55b64",
                  "sg-097de78a38f699221"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "766884883801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:security-group/sg-06a1b4a4a30edc247",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a1b4a4a30edc247",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "766884883801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:security-group/sg-017879cddf1ddbb33",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017879cddf1ddbb33",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c3c301f3ef338b4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "766884883801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:security-group/sg-01c3c301f3ef338b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c3c301f3ef338b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097de78a38f699221"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a1b4a4a30edc247"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "766884883801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:security-group/sg-0508183825df55b64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0508183825df55b64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097de78a38f699221"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017879cddf1ddbb33"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "766884883801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3880729928",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01c3c301f3ef338b4",
            "self": false,
            "source_security_group_id": "sg-097de78a38f699221",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1027115667",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017879cddf1ddbb33",
            "self": false,
            "source_security_group_id": "sg-01c3c301f3ef338b4",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-458345892",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d016c44e49f91a39",
            "self": false,
            "source_security_group_id": "sg-097de78a38f699221",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-307463832",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d016c44e49f91a39",
            "self": false,
            "source_security_group_id": "sg-0508183825df55b64",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2174031378",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d016c44e49f91a39",
            "self": false,
            "source_security_group_id": "sg-0508183825df55b64",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2731196156",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01c3c301f3ef338b4",
            "self": false,
            "source_security_group_id": "sg-06a1b4a4a30edc247",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2650799223",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0508183825df55b64",
            "self": false,
            "source_security_group_id": "sg-017879cddf1ddbb33",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-4103513818",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0508183825df55b64",
            "self": false,
            "source_security_group_id": "sg-097de78a38f699221",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:subnet/subnet-0b326fbcba2eee7ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b326fbcba2eee7ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766884883801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-1",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-1",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:subnet/subnet-04bbca8ea49c8780f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bbca8ea49c8780f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766884883801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-2",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-2",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:subnet/subnet-0a7abb217a7bd6457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7abb217a7bd6457",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766884883801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-3",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-3",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:subnet/subnet-025fc45d33a26d1b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025fc45d33a26d1b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766884883801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-4",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-private-subnet-4",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:subnet/subnet-02b8ee509178c7ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b8ee509178c7ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766884883801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-public-subnet-1",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-public-subnet-1",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:subnet/subnet-076ca6e68e50763d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076ca6e68e50763d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766884883801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-public-subnet-2",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-public-subnet-2",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "vpc_id": "vpc-04e89d79425540b31"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766884883801:vpc/vpc-04e89d79425540b31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0f2cca22645253734",
            "default_route_table_id": "rtb-09310d522447cac5f",
            "default_security_group_id": "sg-014097860d8f8a007",
            "dhcp_options_id": "dopt-09f090654351f14aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04e89d79425540b31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09310d522447cac5f",
            "owner_id": "766884883801",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "tommyverceti99@yahoo.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "tommyverceti99@yahoo.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}